--- a/index.html
+++ b/index.html
@@ -14,18 +14,25 @@
   </head>
   <body>
     <header>
-      <h1>Vue Events</h1>
+      <h1>Vue Dynamic Styling</h1>
     </header>
-    <section id="events">
-      <h2>Events in Action</h2>
-      <button @click="add(10)">Add 10</button>
-      <button @click="reduce(5)">Subtract 5</button>
-      <p>Result: {{ counter }}</p>
-      <input type="text" v-model="name">
-      <!-- :value="..." is a shorter way for v-bind:value="..." || @click is a shorter form for v-on:click="..." || there is no short way to type v-model="..." like the other ones <3-->
-      <input type="text" v-model="lastName">
-      <button @click="resetInput">Reset Input</button>
-      <p>Your Name: {{ fullName }}</p>
+    <section id="styling">
+      <div 
+        class="demo"
+        :class="{active: boxASelected}" 
+        @click="boxSelected('A')"
+      ></div>    
+      <div 
+        class="demo"
+        :class="{active: boxBSelected}" 
+        @click="boxSelected('B')"
+      ></div>
+      <div
+        class="demo"
+        :class="{active: boxCSelected}" 
+        @click="boxSelected('C')"
+      ></div>
+
     </section>
   </body>
 </html>
